Bug 3390 - S3 wake fails: phys vs. virtual wake vector - IBM X40
Summary: S3 wake fails: phys vs. virtual wake vector - IBM X40
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Shaohua
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-09-13 10:55 UTC by Jacob Emcken
Modified: 2004-11-15 19:39 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.8 from debian testing
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
acpi dump on an IBM x40 (231.56 KB, text/plain)
2004-10-02 03:00 UTC, Jacob Emcken
Details
proposed patch (728 bytes, patch)
2004-10-15 02:32 UTC, Shaohua
Details | Diff
Picture of output after patch (74.40 KB, image/jpeg)
2004-10-16 15:54 UTC, Jacob Emcken
Details
David Shaohua's actual patch as applied (1.27 KB, patch)
2004-10-18 11:54 UTC, Len Brown
Details | Diff

Description Jacob Emcken 2004-09-13 10:55:17 UTC
Distribution: Debian
Hardware Environment: IBM x40
Software Environment: Debian GNU/Linux (Sarge/testing) with a 2.6.8 kernel
Problem Description:

I can make the laptop sleep with the command:
echo -n "mem" > /sys/power/state

NOTE: I have to remove USB 2.0 first (rmmod ehci_hcd) for the laptom to sleep.

It seems that the laptops goes to sleep without errors. On the laptop there is a
small LED indicating that the laptop sleeps. This goes on after the screens
turns black and the harddrive and fan stops spinning.

Steps to reproduce:
Write the following on the console as root:
rmmod ehci_hcd
echo -n "mem" > /sys/power/state
Comment 1 Jacob Emcken 2004-09-13 11:05:44 UTC
I was a little to fast to submit the bug... the problem is that the laptop can't
wake up again.

I tried the following:
1. Pressing the on/off-button 
2. Pressing the Fn-button and F4 (which has a small sleep icon on it)
3. Closing and opening the lid multiple times
4. Pressing the 'Access IBM'-button
5. Gently pressing random buttons on the keyboard

When holding down the power-button for a some seconds the sleep-LED goes out and
I can power up the laptop as normal.
Comment 2 Shaohua 2004-09-26 18:51:56 UTC
Could you please attach your 'acpidmp' output?
Comment 3 Jacob Emcken 2004-10-02 03:00:29 UTC
Created attachment 3753 [details]
acpi dump on an IBM x40

First I had trouble finding pmtools.
The link on this page dosn't work:
http://acpi.sourceforge.net/wiki/index.php/BugReports

I found another link on:
http://acpi.sourceforge.net/download.html

Dunno if it is the same.


Now I have compiled acpidmp for my Debian machine... I hope I did it right.

The only thing I have to do is run ./acpidmp right?
I have provided the output in the attached file (ibm_x40_acpidmp.txt).

Do you need any other info please let me know.
Comment 4 Shaohua 2004-10-15 02:32:49 UTC
Created attachment 3842 [details]
proposed patch

Does this patch help you?
Comment 5 Jacob Emcken 2004-10-16 15:13:24 UTC
Sorry the patch doesn't seem to change anything.

But I have noticed something new while I was trying out the patch.

After the the laptop goes to sleep everything goes silent. But when I press the
power button I sounds like the harddisk gets its power on again.
The sleep-LED is still turned on though, and the laptop does react to keystrokes.

I tried to:
Ctrl+Alt+F1
root
<root_password>
halt

but no activity whatsoever (no HD-LED blinking no sound from the laptop that
indicates the laptop working).


I have also tried to add the following boot parameter: acpi_sleep=s3_bios
as surgessted here: http://johnleach.co.uk/documents/thinkpadx40/index.html
But that also doesn't seem to change anything :-/

Comment 6 Jacob Emcken 2004-10-16 15:54:02 UTC
Created attachment 3846 [details]
Picture of output after patch

Your patch actually changes something... sorry, my mistake.

I had made a typo in the boot parameter (apci_sleep - now corrected to
acpi_sleep) so now I can see some output after I try to resume.

Without your patch I only se 3 yellow letters (inu). These letters also show
after applying your patch but I also se alot more. I have attaced the output
(jpg, picture taken with my cell phone).
Hopes it is okay.

I have tried to disable cpufreqd with /etc/init.d/cpufreqd stop
and X with /etc/init.d/gdm stop
no wireless driver loaded
bluetooth not activated
Comment 7 Shaohua 2004-10-17 00:24:46 UTC
Great, glad the patch helps your laptop. I looked at your picture, it shows 
your system actually waked up. If it can't completely work, it should be other 
bugs.
Comment 8 Jacob Emcken 2004-10-17 00:33:54 UTC
Okay thanks.
Ill play around with it :)
Comment 9 Len Brown 2004-10-18 11:54:15 UTC
Created attachment 3851 [details]
David Shaohua's actual patch as applied
Comment 10 Andreas Mohr 2004-11-15 08:24:11 UTC
Oh well, found that probable virt <-> phys resume vector messup about a year ago
(during an extensive investigation of ACPI code since my Dell Inspiron 8000
notebook has an awful lot of problems with suspend/resume), mailed to a
maintainer (don't remember which one, and it's probably better now to not put
names here ;-), but his answer about this particular issue was something like
"hmm, well, dunno".

Anyway, great to see it fixed, finally! Thanks!

Andreas Mohr, andi AT at host called lisas.de
Comment 11 Len Brown 2004-11-15 19:39:21 UTC
shipped in Linux 2.6.10-rc2 - closed. 

Note You need to log in before you can comment on or make changes to this bug.